// Vitest Snapshot v1

exports[`packShapesIntoGroups > it should be correct for a group with two children beside each other 1`] = `
{
  "1": {
    "childIndex": 1,
    "children": [
      "2",
      "3",
    ],
    "contentSize": [
      100,
      100,
    ],
    "hasBeenMeasured": false,
    "id": "1",
    "name": "1",
    "parentId": "canvas",
    "point": [
      0,
      0,
    ],
    "rotation": 0,
    "size": [
      100,
      332,
    ],
    "stories": [],
    "type": "group",
  },
  "2": {
    "childIndex": 2,
    "children": [],
    "contentSize": [
      0,
      0,
    ],
    "hasBeenMeasured": false,
    "id": "2",
    "name": "2",
    "parentId": "canvas",
    "point": [
      0,
      116,
    ],
    "rotation": 0,
    "size": [
      100,
      100,
    ],
    "stories": [],
    "type": "group",
  },
  "3": {
    "childIndex": 2,
    "children": [],
    "contentSize": [
      0,
      0,
    ],
    "hasBeenMeasured": false,
    "id": "3",
    "name": "3",
    "parentId": "canvas",
    "point": [
      0,
      232,
    ],
    "rotation": 0,
    "size": [
      100,
      100,
    ],
    "stories": [],
    "type": "group",
  },
}
`;

exports[`packShapesIntoGroups > it should group two shapes 1`] = `
{
  "1": {
    "childIndex": 1,
    "children": [],
    "contentSize": [
      0,
      0,
    ],
    "hasBeenMeasured": false,
    "id": "1",
    "name": "1",
    "parentId": "canvas",
    "point": [
      0,
      0,
    ],
    "rotation": 0,
    "size": [
      100,
      100,
    ],
    "stories": [],
    "type": "group",
  },
  "2": {
    "childIndex": 2,
    "children": [],
    "contentSize": [
      0,
      0,
    ],
    "hasBeenMeasured": false,
    "id": "2",
    "name": "2",
    "parentId": "canvas",
    "point": [
      0,
      116,
    ],
    "rotation": 0,
    "size": [
      100,
      100,
    ],
    "stories": [],
    "type": "group",
  },
}
`;

exports[`packShapesIntoGroups > it should work with 2 groups of 2 levels of nesting 1`] = `
{
  "1": {
    "childIndex": 1,
    "children": [
      "2",
      "4",
    ],
    "contentSize": [
      100,
      100,
    ],
    "hasBeenMeasured": false,
    "id": "1",
    "name": "1",
    "parentId": "canvas",
    "point": [
      0,
      0,
    ],
    "rotation": 0,
    "size": [
      216,
      332,
    ],
    "stories": [],
    "type": "group",
  },
  "2": {
    "childIndex": 2,
    "children": [
      "3",
    ],
    "contentSize": [
      100,
      100,
    ],
    "hasBeenMeasured": false,
    "id": "2",
    "name": "2",
    "parentId": "canvas",
    "point": [
      0,
      116,
    ],
    "rotation": 0,
    "size": [
      100,
      216,
    ],
    "stories": [],
    "type": "group",
  },
  "3": {
    "childIndex": 3,
    "children": [],
    "contentSize": [
      0,
      0,
    ],
    "hasBeenMeasured": false,
    "id": "3",
    "name": "3",
    "parentId": "canvas",
    "point": [
      0,
      232,
    ],
    "rotation": 0,
    "size": [
      100,
      100,
    ],
    "stories": [],
    "type": "group",
  },
  "4": {
    "childIndex": 4,
    "children": [
      "5",
    ],
    "contentSize": [
      100,
      100,
    ],
    "hasBeenMeasured": false,
    "id": "4",
    "name": "4",
    "parentId": "canvas",
    "point": [
      116,
      116,
    ],
    "rotation": 0,
    "size": [
      100,
      216,
    ],
    "stories": [],
    "type": "group",
  },
  "5": {
    "childIndex": 5,
    "children": [],
    "contentSize": [
      0,
      0,
    ],
    "hasBeenMeasured": false,
    "id": "5",
    "name": "5",
    "parentId": "canvas",
    "point": [
      116,
      232,
    ],
    "rotation": 0,
    "size": [
      100,
      100,
    ],
    "stories": [],
    "type": "group",
  },
}
`;

exports[`packShapesIntoGroups > it should work with 2 levels of nesting 1`] = `
{
  "1": {
    "childIndex": 1,
    "children": [
      "2",
    ],
    "contentSize": [
      100,
      100,
    ],
    "hasBeenMeasured": false,
    "id": "1",
    "name": "1",
    "parentId": "canvas",
    "point": [
      0,
      0,
    ],
    "rotation": 0,
    "size": [
      100,
      332,
    ],
    "stories": [],
    "type": "group",
  },
  "2": {
    "childIndex": 2,
    "children": [
      "3",
    ],
    "contentSize": [
      100,
      100,
    ],
    "hasBeenMeasured": false,
    "id": "2",
    "name": "2",
    "parentId": "canvas",
    "point": [
      0,
      116,
    ],
    "rotation": 0,
    "size": [
      100,
      216,
    ],
    "stories": [],
    "type": "group",
  },
  "3": {
    "childIndex": 2,
    "children": [],
    "contentSize": [
      0,
      0,
    ],
    "hasBeenMeasured": false,
    "id": "3",
    "name": "3",
    "parentId": "canvas",
    "point": [
      0,
      232,
    ],
    "rotation": 0,
    "size": [
      100,
      100,
    ],
    "stories": [],
    "type": "group",
  },
}
`;

exports[`packShapesIntoGroups > it should wrap single item in nested group 1`] = `
{
  "1": {
    "childIndex": 1,
    "children": [
      "2",
    ],
    "contentSize": [
      0,
      0,
    ],
    "hasBeenMeasured": false,
    "id": "1",
    "name": "1",
    "parentId": "canvas",
    "point": [
      0,
      0,
    ],
    "rotation": 0,
    "size": [
      100,
      116,
    ],
    "stories": [],
    "type": "group",
  },
  "2": {
    "childIndex": 2,
    "children": [],
    "contentSize": [
      0,
      0,
    ],
    "hasBeenMeasured": false,
    "id": "2",
    "name": "2",
    "parentId": "canvas",
    "point": [
      0,
      16,
    ],
    "rotation": 0,
    "size": [
      100,
      100,
    ],
    "stories": [],
    "type": "group",
  },
}
`;

exports[`packShapesIntoGroups > it should wrap single item in nested group with content size 1`] = `
{
  "1": {
    "childIndex": 1,
    "children": [
      "2",
    ],
    "contentSize": [
      100,
      100,
    ],
    "hasBeenMeasured": false,
    "id": "1",
    "name": "1",
    "parentId": "canvas",
    "point": [
      0,
      0,
    ],
    "rotation": 0,
    "size": [
      100,
      216,
    ],
    "stories": [],
    "type": "group",
  },
  "2": {
    "childIndex": 2,
    "children": [],
    "contentSize": [
      0,
      0,
    ],
    "hasBeenMeasured": false,
    "id": "2",
    "name": "2",
    "parentId": "canvas",
    "point": [
      0,
      116,
    ],
    "rotation": 0,
    "size": [
      100,
      100,
    ],
    "stories": [],
    "type": "group",
  },
}
`;
